2020-09-11 4.1.4:

	General improvements:

	all : allowed `Any` as type parameter in `catch(e:SomeType<Any>)` (#9641)
	all : improved compilation speed for `try..catch` expressions (#9848)

	Bugfixes:

	all : fixed `switch` typing error for arrow functions with `Void` return type (#9813)
	all : fixed typing of arrow functions with empty blocks as bodies (closes #9843)
	macro : fixed `haxe.macro.Context.getResources()` (#9838)
	php : fixed false detection of `catch` vars in anonymous functions as captured from outer scope
	php : fixed return type of extern definition for `fseek` function
	cs,java : fixed generation of `@:generic` classes with anonymous functions (#9799)
	jvm : fixed sending/reading messages with `sys.thread.Threads` for threads created outside of Haxe (#9863)
	jvm : fixed multiplication of `Null<Float>` and `Int` (#9870)
	flash : fixed loading swc libraries containing `Vector` without a type parameter (#9805)
	hl : fixed messages being send to wrong threads with `sendMessage`/`readMessage` in `sys.thread.Thread` (#9875)
	cpp : fixed `cpp.Lib.stringReference()` (#8457)

2020-07-22 4.1.3

	General improvements:

	all : added an error on `return` outside of a function (#9659)
	php : support @:native("") for extern classes (#6448)
	python : support @:native("") for extern classes (#6448)

	Bugfixes:

	all : fixed compilation server bug caused by removing `inline` from a method (#9690)
	macro : fixed compiler crash if `@:genericBuild` meta is removed by a macro during building (#9391)
	jvm : fixed "--java-lib-extern" (#9515)
	flash : fixed var shadowing issue for variables captured in a closure inside of a loop (#9624)
	flash : fixed `VerifyError` exception when `Void` end up as an argument type after inlining (#9678)
	php : fixed runtime error "cannot use temporary expression in write context" for call arguments passed by reference
	cs : fixed `cs.Lib.rethrow` (#9738)
	nullsafety: fixed `@:nullSafety(Off)` in closures inside of constructors (#9643)