@@ -1,3 +1,9 @@
+2020-XX-XX 4.1.5:
+
+	Bugfixes:
+
+	jvm : fixed equality checks for `Null<Float>` and `Null<Int>` (#9897)
+
 2020-09-11 4.1.4:
 
 	General improvements:
